2004-04-29 Colin McCormack <colin@chinix.com>
	* lib/template.tcl: allow non-dynamic templates to control
	content type of returned file.

2004-04-27 Colin McCormack <colin@chinix.com>
	* src/crypt.c: added a test for error return from crypt()
	* lib/{fallback,mtype,template}.tcl: corrected and extended source
	comments

2004-04-23 Colin McCormack <colin@chinix.com>
	* bin/httpdthread.tcl: added a missing package require httpd::digest

2004-04-20 Brent Welch <welch@panasas.com>
	* lib/session.tcl: Fixed a couple of typos.  Moved the
        "file mkdir" of the sessions save directory into Session_Save
        because this doesn't work in the starkit version.  We should
        still fix the default sessions dir so it isn't under htdocs

2004-04-20 Brent Welch <welch@panasas.com>
	* DIST_build/DIST: Added generation of tclhttpd.kit starkit

2004-04-21 Colin McCormack <colin@chinix.com>
	* lib/session.tcl: added optional MD5 long session IDs,
	cookie sessions, persistent sessions.
	* sampleapps/session/: added demo for sessions.

2004-04-19 Brent Welch <welch@panasas.com>
        * Various doc updates.
        Moved learn/self.tml to templates/self.tml
        * bin/httpd.tcl: Introduced the CommandLineOptions variable
        so it can be reference by the htdocs/learn/setup.tml page.

2004-04-17 Brent Welch <welch@panasas.com>
        * Various doc updates.
        Created htdocs/man/index.tml
        renamed manual/reference.tml -> manual/intro.tml
        renamed manual/technotes.tml -> manual/embedding.tml

2004-04-15 Colin McCormack <colin@chinix.com>
	* lib/upload.tcl: implemented -maxfiles, -maxbytes
	and -totalbytes options to Upload_Url.
	* debian/ added support for Debian daemon package
	* sampleapp/upload - simple file upload and delete app

2004-04-15 Colin McCormack <colin@chinix.com>
	* lib/upload.tcl: handle redirect and suspend from upload
	domain
	
2004-04-15 Jeffrey Rankin <jrankin@oneil.com>