@@ -1,6 +1,7 @@
 2004-04-29 Colin McCormack <colin@chinix.com>
 	* lib/template.tcl: allow non-dynamic templates to control
 	content type of returned file.
+	* lib/httpd.tcl: fixed sf error '[925210] bad message length in Httpd_Error'
 
 2004-04-27 Colin McCormack <colin@chinix.com>
 	* src/crypt.c: added a test for error return from crypt()
